# afv

./: README.md
PcbDesign/TurretCtl/: DRV8886.kicad_sch  DRVlib.kicad_sym  ProjLib.kicad_sym  StepperCtl.kicad_sch  TurretCtl.kicad_pcb  TurretCtl.kicad_prl  TurretCtl.kicad_pro  TurretCtl.kicad_sch  fp-info-cache  freerouting.dsn  sym-lib-table  temp-freerouting.dsn
PcbDesign/TurretCtl/assembly/: TurretCtl-all-pos.csv  TurretCtl.csv  TurretCtl.xml
PcbDesign/TurretCtl/gerber/: TurretCtl-B_Cu.gbr  TurretCtl-B_Mask.gbr  TurretCtl-B_Paste.gbr  TurretCtl-B_Silkscreen.gbr  TurretCtl-Edge_Cuts.gbr  TurretCtl-F_Cu.gbr  TurretCtl-F_Mask.gbr  TurretCtl-F_Paste.gbr  TurretCtl-F_Silkscreen.gbr  TurretCtl-In1_Cu.gbr  TurretCtl-In2_Cu.gbr  TurretCtl-NPTH.drl  TurretCtl-PTH.drl  gerber.rar
PcbDesign/pump-lights-siren/: fp-info-cache  opto.kicad_sym  pump-lights-siren.kicad_pcb  pump-lights-siren.kicad_prl  pump-lights-siren.kicad_pro  pump-lights-siren.kicad_sch  sym-lib-table
afv/: Cargo.toml
afv-internal/: Cargo.toml
afv-internal/examples/: 4-stepper.rs  ethernet-version.rs  pantilt.rs  stepper-board.rs
afv-internal/src/: garmin_lidar_v3.rs  lib.rs  lidar.rs  lights.rs  mainctl.rs  network.rs  pantilt.rs  pump.rs  servo.rs  sirens.rs  stepper.rs  timer.rs  turret.rs
afv-internal/src/w5500/: common_offsets.rs  common_register.rs  control.rs  mod.rs  socket_register.rs
bit/src/: main.rs
common_core/: Cargo.toml
common_core/src/: bits.rs  lib.rs
common_core/src/w5500/: mod.rs  (+1 more)
common_core/tests/: bits.rs
common_std/: Cargo.toml
common_std/src/: gndgui.rs  lib.rs
control-station/: Cargo.toml
control-station/src/: main.rs
eth-station/: Cargo.toml
examples/ethernet/: Cargo.toml
examples/spi/: Cargo.toml
examples/strings/: Cargo.toml
flir/: Cargo.toml
flir/examples/: rtsp-connect.rs
flir/src/: lib.rs
gcs-afv/: Cargo.toml  afv.service
gcs-afv/examples/: afv-bridge.rs  dummy-afv.rs  ethernet.rs  flir-rtsp.rs  scanner.rs  terminal-start.rs
gcs-afv/src/: bus.rs  communicators.rs  distancesensor.rs  flirops.rs  flirturret.rs  gui.rs  lib.rs  messages.rs  network.rs  nozzleturret.rs  scanner.rs  targetops.rs
gcs-afv/src/afv/: flir.rs  mainctl.rs  mod.rs  turret.rs  turretv2.rs
gcs-afv/src/afvbus/: flir.rs  mod.rs  pollresponder.rs
gcs-afv/src/afvctl/: mod.rs
gcs-afv/src/communicators/: afv.rs  flir.rs  naming.rs
gcs-afv/src/communicators/operators/: mod.rs  namingoperator.rs
gcs-afv/src/drivers/: flir.rs  lidar.rs  lights.rs  mod.rs  pump.rs  siren.rs  turret.rs
gcs-afv/src/gcs/: afvselector.rs  bridgefinder.rs  mod.rs
gcs-afv/src/gcs/afvctl/: mod.rs
gcs-afv/src/gcsbus/: afvpoller.rs  afvselector.rs  bridgefinder.rs  mod.rs
gcs-afv/src/gcsbus/afvctl/: flir.rs  mod.rs
gcs-afv/src/network/: afv_bridge.rs  mod.rs  networkbridge.rs  scanner.rs  socket.rs
gcs-afv/src/networkbus/: mod.rs  networkbridge.rs  scanner.rs
gcs-afv/src/operators/: afv_launcher.rs  flir.rs  mod.rs  naming.rs  nozzle.rs  peripheral.rs  pump.rs
gcs-afv/src/ui/: mod.rs
ground-control/: Cargo.toml
sigctl/: Cargo.toml
strings/: Cargo.toml
strings/src/: main.rs
(+22 files in other folders)
