[package]
name = "afv-internal"
version = "0.1.0"
authors = ["Joshua Black <joshuablack.ecommerce@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
serde-json-core = "0.5.0"
w5500-hl = { version = "0.9.0", features = ["embedded-hal"] }
avr-device = { version = "0.5.0", features = ["atmega328p", "avr-device-macros"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
