[package]
name = "control-station"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = {version = "1.24.2", features = ["full"]}
eframe = "0.20.1"
common_std = {path = "../common_std"}
flir = {path = "../flir"}
clap = {version = "4.1.4", features = ["derive"]}