[package]
name = "flir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.24.2", features = ["full"]}
retina = "0.4.4"
futures = "0.3.25"
url = "2.3.1"
image = "0.24.5"
eframe = "0.20.1"
openh264 = "0.3.2"
common_std = {path = "../common_std"}
async-trait = "0.1.63"
glam = "0.22.0"
