[package]
name = "gcs-afv"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
tokio = {version = "1.25.0", features = ["full"]}
bincode = "1.3.3"
serde = {version = "1.0.152", features = ["derive"]}
eframe = "0.20.1"
flume = "0.10.14"
rand = "0.8.5"
image = "0.24.5"
retina = "0.4.5"
openh264 = "0.3.2"
url = "2.3.1"
glam = "0.22.0"
futures = "0.3.26"
serde_bytes = "0.11.9"
clap = { version = "4.1.4", features = ["derive"] }
ipnet = "2.7.1"
default-net = "0.12.0"
serde-json-core = "0.5.0"
afv-internal = {path = "../afv-internal"}
pretty_env_logger = "0.4.0"
log = { version = "0.4.17", features = ["release_max_level_info"] }
